mv iojs to io.js

--- a/io.js.docset/Contents/Info.plist
+++ b/io.js.docset/Contents/Info.plist
@@ -2,7 +2,7 @@
 <plist version="1.0">
 <dict>
 <key>CFBundleIdentifier</key>
-<string>iojs</string>
+<string>io.js</string>
 <key>CFBundleName</key>
 <string>io.js</string>
 <key>DocSetPlatformFamily</key>
